bad/assign_literal_int_void.example_compiler_output
ERROR
[1mbad/assign_literal_int_void.lat:5:5: [1;31merror: [0;1mleft side is not assignable[m
	42 = vfunc();
	   [1;32m^[m
[1mbad/assign_literal_int_void.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	42 = vfunc();
	[1;32m^[m
